--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+/* index.css */
+
 @tailwind base;
 @tailwind components;
+
+/* Define custom classes within a @layer directive */
+@layer components {
+  .easy-in {
+    /* Define the styles for the custom class */
+    transition-timing-function: ease-in;
+  }
+}
+
+/* Your existing styles */
+.btn {
+  @apply text-white bg-[#f92e9e] rounded-md shadow-md p-3 hover:scale-[1.1] easy-in duration-100 cursor-pointer hover:bg-pink-500 ease-in;
+}
+
 @tailwind utilities;
